// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogBoxContainer should render error with selectedIndex 1 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 1)",
      "elevation": undefined,
      "height": "100%",
    }
  }
>
  <LogBoxInspectorHeader
    level="error"
    onSelectIndex={[Function]}
    selectedIndex={1}
    total={2}
  />
  <LogBoxInspectorBody
    log={
      LogBoxLog {
        "category": "Some kind of message (second)",
        "componentStack": Array [],
        "count": 1,
        "level": "error",
        "message": Object {
          "content": "Some kind of message (second)",
          "substitutions": Array [],
        },
        "stack": Array [],
        "symbolicated": Object {
          "error": null,
          "stack": null,
          "status": "NONE",
        },
      }
    }
    onRetry={[Function]}
  />
  <LogBoxInspectorFooter
    onDismiss={[Function]}
    onMinimize={[Function]}
  />
</View>
`;

exports[`LogBoxContainer should render null with no logs 1`] = `null`;

exports[`LogBoxContainer should render warning with selectedIndex 0 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 1)",
      "elevation": undefined,
      "height": "100%",
    }
  }
>
  <LogBoxInspectorHeader
    level="warn"
    onSelectIndex={[Function]}
    selectedIndex={0}
    total={2}
  />
  <LogBoxInspectorBody
    log={
      LogBoxLog {
        "category": "Some kind of message (first)",
        "componentStack": Array [],
        "count": 1,
        "level": "warn",
        "message": Object {
          "content": "Some kind of message (first)",
          "substitutions": Array [],
        },
        "stack": Array [],
        "symbolicated": Object {
          "error": null,
          "stack": null,
          "status": "NONE",
        },
      }
    }
    onRetry={[Function]}
  />
  <LogBoxInspectorFooter
    onDismiss={[Function]}
    onMinimize={[Function]}
  />
</View>
`;
